fix install target in case toplevel does not exists

--- a/Makefile.top.local
+++ b/Makefile.top.local
@@ -1,3 +1,4 @@
 install-toploop: all byte
+	mkdir -p $(COQTOPINSTALL)/
 	$(foreach f, $(CMXSFILES) $(CMAFILES), \
             install -m 0644 $(f) $(COQTOPINSTALL)/ &&) true
